fix(footer): horizontal scroll issue (#224)

--- a/core/src/components/footer/footer.scss
+++ b/core/src/components/footer/footer.scss
@@ -4,6 +4,7 @@
   $grid-lg: 992px;
 
   slot[name='top']::slotted(*) {
+    box-sizing: border-box;
     background-color: var(--tds-footer-top-background);
     padding: 40px;
     display: grid;
